--- a/thesis/abstract/abstract.tex
+++ b/thesis/abstract/abstract.tex
@@ -2,10 +2,10 @@
 \begin{abstract}
 
 
-旅行アプリ「旅しお」では旅行計画を簡単に立てることが可能であるが, 予定作成時の情報整理や視覚的な把握が不十分であり,継続的な利用が困難である.
+旅行アプリ「旅しお」では旅行計画を簡単に立てることが可能であるが, 予定作成時の情報整理や位置情報の提示が不十分であり,細かい旅程を決めるまで一貫して利用するのには向いていない.
 本研究では,旅行前の計画段階において,ユーザーがスムーズに情報を整理・共有できることを目的とし,デジタル版しおりの開発を行った.
 具体的な特徴として,アカウント機能や共有機能,旅行名や説明文をキーとした検索機能,旅行日付に基づく時系列整理,目的地の地図表示機能,移動時間表示機能,訪問順序入れ替え機能,チェックリスト機能を実装し,新たな予定を立てやすくした.
-結果としてユーザーは旅行計画を効率的に立てることができ,継続的な利用が可能になった.
+結果としてユーザーは旅行計画を効率的に立てることができ,一貫した利用が可能になった.
 \end{abstract}
 
 
