--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -17,6 +17,8 @@
 
 2つ目は,地図表示機能がないため,目的地の位置関係や全体像を視覚的に理解することが難しく,利用者は外部ツールや手作業で補完しなければならない.
 
+3つ目は, 移動時間の自動算出機能が存在しないため, 各目的地間の所要時間をユーザー自身が都度手動で調べる必要がある点である. これにより, 旅行全体のスケジュールを立てる際に手間がかかり, 計画の精度や効率性が低下する可能性がある.
+
 これらの課題は,旅行計画の際にユーザーにとって大きな障壁となっており,情報の整理や視覚的な理解の低下が考えられる.
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
