--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -92,7 +92,7 @@
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
 具体的には,「旅行中」は緑,「予定」は青,「終了」はグレー,「未定」は黄色となっている.
 さらに,色だけでなくアイコンを加えることでより視覚的にわかりやすい工夫を行った.
- #+CAPTION: 旅行一覧画面.
+ #+CAPTION: 色とアイコンで視覚的に整理された旅行一覧画面.
  #+attr_latex: :width 15cm
  file:./fig/travel.png
 
@@ -122,7 +122,7 @@
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
 さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
- #+CAPTION: 移動時間表示画面.
+ #+CAPTION: 車による移動時間の自動算出結果を表示した画面.
  #+attr_latex: :width 12cm
  file:./fig/car.png
 
