--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,7 +1,7 @@
 \tableofcontents
 
 \chapter{序論}
-\label{sec:org410153c}
+\label{sec:org469dd20}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org852a585}
+\label{sec:orgce9908c}
 \section{開発手法}
-\label{sec:orgdb3fd64}
+\label{sec:org0b75fe0}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Dango}
-\label{sec:orgfa910a4}
+\label{sec:orgcdded6e}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
@@ -40,12 +40,12 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \subsection{Heroku}
-\label{sec:org3e1014f}
+\label{sec:orgdf39fe0}
 \chapter{結果と考察}
-\label{sec:org7f36d01}
+\label{sec:orgaf23dd0}
 \section{アプリ機能}
-\label{sec:org450cd14}
-今回，開発したアプリでは大きく分けて5つの機能を実装した．
+\label{sec:org39af272}
+今回，開発したアプリでは大きく分けて7つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
 \centering
@@ -54,7 +54,7 @@
 \end{figure}
 
 \subsection{アカウント機能}
-\label{sec:orge720197}
+\label{sec:org1d139a1}
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
 ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
@@ -79,9 +79,18 @@
 \caption{新規登録画面.}
 \end{figure}
 
+ログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
+このダイアログでは「ログアウトしますか？」というメッセージとともに,OKまたはキャンセルの選択肢が提示される.
+専用のログアウトページは設けていないが、ユーザーの意図しないログアウトを防ぐための確認ステップを導入することで、操作ミスの抑制とユーザー体験の向上を図っている.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=10cm]{./fig/logout.png}
+\caption{ログアウト画面.}
+\end{figure}
+
 \newpage
 \subsection{共有機能}
-\label{sec:org91c91fe}
+\label{sec:org907bfa5}
 本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
@@ -92,8 +101,48 @@
 \caption{リンク作成画面.}
 \end{figure}
 
+ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
+また,ワンクリックでURLをコピーできるボタンを設置しており,手動入力によるミスを防ぎつつ,スムーズな共有を実現している.
+コピー完了後には,コピーしましたと表示されるため、操作結果が視覚的に分かりやすく,ユーザーの安心感にもつながっている.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/link.png}
+\caption{共有URL表示画面.}
+\end{figure}
+
+このリンクを受け取った相手は,パスワードを入力することで,旅行計画の詳細を閲覧できる.
+パスワードが正確に入力された場合は共有された旅行画面をみることができる.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/share_tokyo.png}
+\caption{パスワード入力画面.}
+\end{figure}
+
+パスワードが正確に入力されなかった場合は図3.8のようにメッセージが表示される.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/wrong.png}
+\caption{パスワード入力画面.}
+\end{figure}
+
+観光場所の追加や削除などにより情報を編集した場合でも, リンクが有効期限内であれば常に最新の旅行情報が反映されるようになっている.
+これにより, 共有先のユーザーも常に最新の旅程を確認でき, 変更内容の伝達漏れを防ぐことができる.
+
+また, 情報を更新するたびに新たなリンクを作成する必要がないため, 複数のリンクが発生して混乱することもなく, スムーズな共有が可能となっている.
+
+
+共有された側のユーザーは,旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
+これにより,情報の改ざんや誤操作を防ぎつつ,安全かつ一方向的な共有を実現している.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=10cm]{./fig/tokyo.png}
+\caption{共有表示画面.}
+\end{figure}
+
+
+
 \subsection{旅行作成画面}
-\label{sec:orgdc1c528}
+\label{sec:org10da578}
 旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
 \begin{figure}[htbp]
@@ -103,7 +152,7 @@
 \end{figure}
 
 \subsection{旅程の視覚化管理}
-\label{sec:org9ac3eef}
+\label{sec:org37ce285}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -116,7 +165,7 @@
 \caption{色とアイコンで視覚的に整理された旅行一覧画面.}
 \end{figure}
 
-また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
+また,旅行詳細画面では,Google Maps API [4]を用いて登録された観光場所を地図上に表示する機能を導入した.
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
@@ -135,8 +184,19 @@
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
 
+
+\subsection{UI設計とスタイルの工夫}
+\label{sec:org31a031a}
+本システムでは,Bootstrap 5.1.3[5]を採用し,ユーザーインターフェースの視覚的理解を促進した.
+
+観光地情報などの表示にBootstrapのカードコンポーネントを活用し,情報の視認性と整理性を高めている.
+カードは,場所情報や旅行詳細をカード形式で表示することで,各情報のまとまりを視覚的に明確化した.これにより,ユーザーは一目で情報の区切りを理解できる.
+
+さらにFont Awesome[5]を併用し,ボタンにアイコンを付与することで,言語に依存しない直感的な操作を可能にした.
+
+
 \subsection{旅程の編集・調節機能}
-\label{sec:org3b7c27a}
+\label{sec:org5fb6475}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
@@ -144,6 +204,7 @@
 
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
+これらはMapboxのDirections API[6]を活用して開発を行っている.
 さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
 \begin{figure}[htbp]
 \centering
@@ -155,7 +216,7 @@
 
 
 \subsection{検索機能}
-\label{sec:org00b7e18}
+\label{sec:org7a977ba}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
@@ -170,8 +231,12 @@
 \caption{検索結果画面.}
 \end{figure}
 
-さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
-これにより,ユーザーは住所を調べて緯度経度を入力する必要がなく,直感的に観光地を登録できるようになった.
+観光地の登録機能においては,MapboxのSearch Box API[7]を活用した地名検索機能を導入した.
+これにより,ユーザーは住所だけでなく,観光地名やカテゴリ,通り名などを入力することで,目的の場所を効率的に検索できるようになった.
+
+以前は完全無料であるOpenStreetMapのNominatimを利用していたが,目的の観光地が検索にヒットしにくいという課題があった.MapboxのSearch Box APIへの切り替えにより,検索精度が向上し,より多くの地名を正確に取得できるようになったことで,ユーザー体験の向上につながった.
+
+また,MapboxのSearch Box APIは月10万回まで無料で利用できるため,コスト面でも導入しやすいという利点がある.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=12cm]{./fig/search_place.png}
@@ -180,7 +245,7 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:orge771bab}
+\label{sec:org18d9ea6}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -212,8 +277,9 @@
 これらの機能は,旅行前の準備を支援する上で重要な役割を果たしており,ユーザーが安心して出発できるよう,
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
+
 \chapter{まとめ}
-\label{sec:org3df84b6}
+\label{sec:org33352bf}
 
 本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
 視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
