--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -42,8 +42,8 @@
 
 *** Heroku
 * 結果と考察
-** アプリ機能
-今回，開発したアプリでは大きく分けて5つの機能を実装した．
+** [#B] アプリ機能
+今回，開発したアプリでは大きく分けて7つの機能を実装した．
 それぞれの機能は図3.1の通りである．
  #+CAPTION: アプリ機能一覧.
  #+attr_latex: :width 15cm
@@ -68,6 +68,13 @@
  #+attr_latex: :width 10cm
  file:./fig/registration.png
 
+ログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
+このダイアログでは「ログアウトしますか？」というメッセージとともに,OKまたはキャンセルの選択肢が提示される.
+専用のログアウトページは設けていないが、ユーザーの意図しないログアウトを防ぐための確認ステップを導入することで、操作ミスの抑制とユーザー体験の向上を図っている.
+  #+CAPTION: ログアウト画面.
+ #+attr_latex: :width 10cm
+ file:./fig/logout.png
+
 #+LATEX: \newpage
 *** 共有機能
 本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
@@ -77,6 +84,38 @@
 #+CAPTION: リンク作成画面.
  #+attr_latex: :width 12cm
  file:./fig/share.png
+
+ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
+また,ワンクリックでURLをコピーできるボタンを設置しており,手動入力によるミスを防ぎつつ,スムーズな共有を実現している.
+コピー完了後には,コピーしましたと表示されるため、操作結果が視覚的に分かりやすく,ユーザーの安心感にもつながっている.
+#+CAPTION: 共有URL表示画面.
+ #+attr_latex: :width 12cm
+ file:./fig/link.png
+
+このリンクを受け取った相手は,パスワードを入力することで,旅行計画の詳細を閲覧できる.
+パスワードが正確に入力された場合は共有された旅行画面をみることができる.
+#+CAPTION: パスワード入力画面.
+ #+attr_latex: :width 12cm
+ file:./fig/share_tokyo.png
+
+パスワードが正確に入力されなかった場合は図3.8のようにメッセージが表示される.
+ #+CAPTION: パスワード入力画面.
+ #+attr_latex: :width 12cm
+ file:./fig/wrong.png
+
+観光場所の追加や削除などにより情報を編集した場合でも, リンクが有効期限内であれば常に最新の旅行情報が反映されるようになっている.
+これにより, 共有先のユーザーも常に最新の旅程を確認でき, 変更内容の伝達漏れを防ぐことができる.
+
+また, 情報を更新するたびに新たなリンクを作成する必要がないため, 複数のリンクが発生して混乱することもなく, スムーズな共有が可能となっている.
+
+
+共有された側のユーザーは,旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
+これにより,情報の改ざんや誤操作を防ぎつつ,安全かつ一方向的な共有を実現している.
+#+CAPTION: 共有表示画面.
+ #+attr_latex: :width 10cm
+ file:./fig/tokyo.png
+
+
 
 *** 旅行作成画面
 旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
@@ -96,7 +135,7 @@
  #+attr_latex: :width 15cm
  file:./fig/travel.png
 
-また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
+また,旅行詳細画面では,Google Maps API [4]を用いて登録された観光場所を地図上に表示する機能を導入した.
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
@@ -113,6 +152,16 @@
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
 
+
+*** UI設計とスタイルの工夫
+ 本システムでは,Bootstrap 5.1.3[5]を採用し,ユーザーインターフェースの視覚的理解を促進した.
+
+      観光地情報などの表示にBootstrapのカードコンポーネントを活用し,情報の視認性と整理性を高めている.
+      カードは,場所情報や旅行詳細をカード形式で表示することで,各情報のまとまりを視覚的に明確化した.これにより,ユーザーは一目で情報の区切りを理解できる.
+
+      さらにFont Awesome[5]を併用し,ボタンにアイコンを付与することで,言語に依存しない直感的な操作を可能にした.
+
+
 *** 旅程の編集・調節機能
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
@@ -121,6 +170,7 @@
 
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
+これらはMapboxのDirections API[6]を活用して開発を行っている.
 さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
  #+CAPTION: 車による移動時間の自動算出結果を表示した画面.
  #+attr_latex: :width 12cm
@@ -142,14 +192,18 @@
  #+attr_latex: :width 12cm
  file:./fig/search_results.png
 
-さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
-これにより,ユーザーは住所を調べて緯度経度を入力する必要がなく,直感的に観光地を登録できるようになった.
+観光地の登録機能においては,MapboxのSearch Box API[7]を活用した地名検索機能を導入した.
+これにより,ユーザーは住所だけでなく,観光地名やカテゴリ,通り名などを入力することで,目的の場所を効率的に検索できるようになった.
+
+以前は完全無料であるOpenStreetMapのNominatimを利用していたが,目的の観光地が検索にヒットしにくいという課題があった.そこで,MapboxのSearch Box APIへの切り替えにより,検索精度が向上し,より多くの地名を正確に取得できるようになったことで,ユーザー体験の向上につながった.
+
+また,MapboxのSearch Box APIは月10万回まで無料で利用できるため,コスト面でも導入しやすいという利点がある.
  #+CAPTION: 施設名の入力画面.
  #+attr_latex: :width 12cm
  file:./fig/search_place.png
 
 
-*** [#B] チェックリスト機能
+*** チェックリスト機能
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -174,6 +228,7 @@
  file:./fig/checklist_maintenance.png
 これらの機能は,旅行前の準備を支援する上で重要な役割を果たしており,ユーザーが安心して出発できるよう,
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
+
 
 * まとめ
 
