--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -28,7 +28,7 @@
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
-*** Dango
+*** Django
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
@@ -40,7 +40,6 @@
 
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
-*** Heroku
 * 結果と考察
 ** [#B] アプリ機能
 今回，開発したアプリでは大きく分けて7つの機能を実装した．
@@ -52,23 +51,23 @@
 *** [#B] アカウント機能
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
-ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
+図3.2に示したとおり,ログイン画面では登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
  #+CAPTION: ログイン画面.
  #+attr_latex: :width 10cm
  file:./fig/login.png
 
-ログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
+図3.3に示したとおりログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
  #+CAPTION: ログイン失敗画面.
  #+attr_latex: :width 10cm 
  file:./fig/failure.png
 
-一方,まだ登録を行っていないユーザーに対しては,新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
+一方,まだ登録を行っていないユーザーに対しては,図3.4のように新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
 パスワードの確認入力を設けることで,入力ミスによるログイン失敗を防ぎ、ユーザー体験の向上を図っている.
  #+CAPTION: 新規登録画面.
  #+attr_latex: :width 10cm
  file:./fig/registration.png
 
-ログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
+図3.5に示したとおりログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
 このダイアログでは「ログアウトしますか？」というメッセージとともに,OKまたはキャンセルの選択肢が提示される.
 専用のログアウトページは設けていないが、ユーザーの意図しないログアウトを防ぐための確認ステップを導入することで、操作ミスの抑制とユーザー体験の向上を図っている.
   #+CAPTION: ログアウト画面.
@@ -77,7 +76,7 @@
 
 #+LATEX: \newpage
 *** 共有機能
-本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
+本アプリでは,図3.6に示したとおりユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
 設定された期限を過ぎたリンクに対しては,システムが自動的に無効と判断し,アクセスを制限する仕組みを導入している.
@@ -85,20 +84,20 @@
  #+attr_latex: :width 12cm
  file:./fig/share.png
 
-ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
+図3.7に示したとおり,ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
 また,ワンクリックでURLをコピーできるボタンを設置しており,手動入力によるミスを防ぎつつ,スムーズな共有を実現している.
 コピー完了後には,コピーしましたと表示されるため、操作結果が視覚的に分かりやすく,ユーザーの安心感にもつながっている.
 #+CAPTION: 共有URL表示画面.
  #+attr_latex: :width 12cm
  file:./fig/link.png
 
-このリンクを受け取った相手は,パスワードを入力することで,旅行計画の詳細を閲覧できる.
+図3.8のように,このリンクを受け取った相手は,パスワードを入力することで旅行計画の詳細を閲覧できる.
 パスワードが正確に入力された場合は共有された旅行画面をみることができる.
 #+CAPTION: パスワード入力画面.
  #+attr_latex: :width 12cm
  file:./fig/share_tokyo.png
 
-パスワードが正確に入力されなかった場合は図3.8のようにメッセージが表示される.
+パスワードが正確に入力されなかった場合は図3.9のようにメッセージが表示される.
  #+CAPTION: パスワード入力画面.
  #+attr_latex: :width 12cm
  file:./fig/wrong.png
@@ -109,7 +108,7 @@
 また, 情報を更新するたびに新たなリンクを作成する必要がないため, 複数のリンクが発生して混乱することもなく, スムーズな共有が可能となっている.
 
 
-共有された側のユーザーは,旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
+共有された側のユーザーは,図3.10に示したとおり旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
 これにより,情報の改ざんや誤操作を防ぎつつ,安全かつ一方向的な共有を実現している.
 #+CAPTION: 共有表示画面.
  #+attr_latex: :width 10cm
@@ -118,7 +117,7 @@
 
 
 *** 旅行作成画面
-旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
+図3.11のような旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
   #+CAPTION: 旅行作成画面.
  #+attr_latex: :width 12cm
@@ -127,7 +126,7 @@
 *** 旅程の視覚化管理
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
-まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
+まず,図3.12に示したとおり登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
 具体的には,「旅行中」は緑,「予定」は青,「終了」はグレー,「未定」は黄色となっている.
 さらに,色だけでなくアイコンを加えることでより視覚的にわかりやすい工夫を行った.
@@ -139,7 +138,7 @@
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
-旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
+旅行に含まれる観光場所を図3.13に示したとおり,「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
 これにより, 日程ごとの計画を視覚的に整理しやすくなり,過不足のあるスケジュールや移動の偏りにも気づきやすくなった.
 また,編集対象の日付を明確に切り替えられることで,誤操作の防止にもつながっている.
 
@@ -168,7 +167,7 @@
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
 これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の負担が大幅に軽減された.
 
-また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
+また図3.14に示したとおり,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
 これらはMapboxのDirections API[6]を活用して開発を行っている.
 さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
@@ -183,7 +182,7 @@
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
-そこで,旅行名や説明欄に含まれる単語をもとに部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにした.
+そこで,図3.15のように旅行名や説明欄に含まれる単語をもとに部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにした.
 いずれの検索においても,大文字・小文字を区別しない部分一致検索を実現しているため,ユーザーは入力時に文字の大小を意識する必要がない.
 そのため,検索漏れを防ぐことができ,よりスムーズに目的の情報へアクセスできるようになった.
 また,検索結果の件数を取得し,「○件」という形式で表示することで,検索結果の量を一目で把握できるようにした.
@@ -193,6 +192,7 @@
  file:./fig/search_results.png
 
 観光地の登録機能においては,MapboxのSearch Box API[7]を活用した地名検索機能を導入した.
+施設名の入力画面は図3.16である.
 これにより,ユーザーは住所だけでなく,観光地名やカテゴリ,通り名などを入力することで,目的の場所を効率的に検索できるようになった.
 
 以前は完全無料であるOpenStreetMapのNominatimを利用していたが,目的の観光地が検索にヒットしにくいという課題があった.そこで,MapboxのSearch Box APIへの切り替えにより,検索精度が向上し,より多くの地名を正確に取得できるようになったことで,ユーザー体験の向上につながった.
@@ -205,7 +205,7 @@
 
 *** チェックリスト機能
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
-まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
+まず,図3.17のように旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
 さらに,基本項目をテンプレート化することで,今回だけ書き忘れたという漏れを防ぐ効果も期待できる.
 
@@ -214,13 +214,13 @@
  file:./fig/checklist_setting.png
 
 また,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
-これにより,ユーザーは旅行の目的や季節,同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+これにより,ユーザーは旅行の目的や季節,同行者に応じて,図3.18のように必要な項目を柔軟に追加することも可能となった.
 状況に応じたカスタマイズが行えることで,より実際のニーズに即した準備ができるようになり,忘れ物や準備漏れの防止にもつながる.
  #+CAPTION: チェックリスト追加画面.
  #+attr_latex: :width 10cm
  file:./fig/add_checklist.png
 
-さらに,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
+さらに,図3.19に示したとおり,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
 これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の負担を軽減することが可能となった.
 チェックの状態は旅行ごとに保存されるため,複数の旅行を並行して準備する場合でも, 各旅程の進捗を個別に管理できる.
 #+CAPTION: チェックリストの管理画面.
