--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,7 +1,7 @@
 \tableofcontents
 
 \chapter{序論}
-\label{sec:org469dd20}
+\label{sec:org20812b4}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:orgce9908c}
+\label{sec:orgca12a8c}
 \section{開発手法}
-\label{sec:org0b75fe0}
+\label{sec:org28dc51a}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
-\subsection{Dango}
-\label{sec:orgcdded6e}
+\subsection{Django}
+\label{sec:org8def3c2}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
@@ -39,12 +39,10 @@
 
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
-\subsection{Heroku}
-\label{sec:orgdf39fe0}
 \chapter{結果と考察}
-\label{sec:orgaf23dd0}
+\label{sec:org9ebcd50}
 \section{アプリ機能}
-\label{sec:org39af272}
+\label{sec:org9404be7}
 今回，開発したアプリでは大きく分けて7つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -54,24 +52,24 @@
 \end{figure}
 
 \subsection{アカウント機能}
-\label{sec:org1d139a1}
+\label{sec:orgced2597}
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
-ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
+図3.2に示したとおり,ログイン画面では登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./fig/login.png}
 \caption{ログイン画面.}
 \end{figure}
 
-ログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
+図3.3に示したとおりログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./fig/failure.png}
 \caption{ログイン失敗画面.}
 \end{figure}
 
-一方,まだ登録を行っていないユーザーに対しては,新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
+一方,まだ登録を行っていないユーザーに対しては,図3.4のように新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
 パスワードの確認入力を設けることで,入力ミスによるログイン失敗を防ぎ、ユーザー体験の向上を図っている.
 \begin{figure}[htbp]
 \centering
@@ -79,7 +77,7 @@
 \caption{新規登録画面.}
 \end{figure}
 
-ログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
+図3.5に示したとおりログアウト機能も実装しており,ユーザーがログアウト操作を行うと,確認ダイアログが表示されるようになっている.
 このダイアログでは「ログアウトしますか？」というメッセージとともに,OKまたはキャンセルの選択肢が提示される.
 専用のログアウトページは設けていないが、ユーザーの意図しないログアウトを防ぐための確認ステップを導入することで、操作ミスの抑制とユーザー体験の向上を図っている.
 \begin{figure}[htbp]
@@ -90,8 +88,8 @@
 
 \newpage
 \subsection{共有機能}
-\label{sec:org907bfa5}
-本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
+\label{sec:org2684859}
+本アプリでは,図3.6に示したとおりユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
 設定された期限を過ぎたリンクに対しては,システムが自動的に無効と判断し,アクセスを制限する仕組みを導入している.
@@ -101,7 +99,7 @@
 \caption{リンク作成画面.}
 \end{figure}
 
-ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
+図3.7に示したとおり,ユーザーがパスワードを入力して共有リンクを作成すると,専用URLが画面上に表示される.
 また,ワンクリックでURLをコピーできるボタンを設置しており,手動入力によるミスを防ぎつつ,スムーズな共有を実現している.
 コピー完了後には,コピーしましたと表示されるため、操作結果が視覚的に分かりやすく,ユーザーの安心感にもつながっている.
 \begin{figure}[htbp]
@@ -110,7 +108,7 @@
 \caption{共有URL表示画面.}
 \end{figure}
 
-このリンクを受け取った相手は,パスワードを入力することで,旅行計画の詳細を閲覧できる.
+図3.8のように,このリンクを受け取った相手は,パスワードを入力することで旅行計画の詳細を閲覧できる.
 パスワードが正確に入力された場合は共有された旅行画面をみることができる.
 \begin{figure}[htbp]
 \centering
@@ -118,7 +116,7 @@
 \caption{パスワード入力画面.}
 \end{figure}
 
-パスワードが正確に入力されなかった場合は図3.8のようにメッセージが表示される.
+パスワードが正確に入力されなかった場合は図3.9のようにメッセージが表示される.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=12cm]{./fig/wrong.png}
@@ -131,7 +129,7 @@
 また, 情報を更新するたびに新たなリンクを作成する必要がないため, 複数のリンクが発生して混乱することもなく, スムーズな共有が可能となっている.
 
 
-共有された側のユーザーは,旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
+共有された側のユーザーは,図3.10に示したとおり旅行情報を閲覧することはできるが,内容の編集はできないように制限している.
 これにより,情報の改ざんや誤操作を防ぎつつ,安全かつ一方向的な共有を実現している.
 \begin{figure}[htbp]
 \centering
@@ -142,8 +140,8 @@
 
 
 \subsection{旅行作成画面}
-\label{sec:org10da578}
-旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
+\label{sec:orgf00ac4e}
+図3.11のような旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
 \begin{figure}[htbp]
 \centering
@@ -152,10 +150,10 @@
 \end{figure}
 
 \subsection{旅程の視覚化管理}
-\label{sec:org37ce285}
+\label{sec:orgf8317f8}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
-まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
+まず,図3.12に示したとおり登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
 具体的には,「旅行中」は緑,「予定」は青,「終了」はグレー,「未定」は黄色となっている.
 さらに,色だけでなくアイコンを加えることでより視覚的にわかりやすい工夫を行った.
@@ -169,7 +167,7 @@
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
-旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
+旅行に含まれる観光場所を図3.13に示したとおり,「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
 これにより, 日程ごとの計画を視覚的に整理しやすくなり,過不足のあるスケジュールや移動の偏りにも気づきやすくなった.
 また,編集対象の日付を明確に切り替えられることで,誤操作の防止にもつながっている.
 
@@ -186,7 +184,7 @@
 
 
 \subsection{UI設計とスタイルの工夫}
-\label{sec:org31a031a}
+\label{sec:orgd7a5533}
 本システムでは,Bootstrap 5.1.3[5]を採用し,ユーザーインターフェースの視覚的理解を促進した.
 
 観光地情報などの表示にBootstrapのカードコンポーネントを活用し,情報の視認性と整理性を高めている.
@@ -196,13 +194,13 @@
 
 
 \subsection{旅程の編集・調節機能}
-\label{sec:org5fb6475}
+\label{sec:orgc8a8a8a}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
 これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の負担が大幅に軽減された.
 
-また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
+また図3.14に示したとおり,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
 これらはMapboxのDirections API[6]を活用して開発を行っている.
 さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
@@ -216,11 +214,11 @@
 
 
 \subsection{検索機能}
-\label{sec:org7a977ba}
+\label{sec:org6cca1be}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
-そこで,旅行名や説明欄に含まれる単語をもとに部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにした.
+そこで,図3.15のように旅行名や説明欄に含まれる単語をもとに部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにした.
 いずれの検索においても,大文字・小文字を区別しない部分一致検索を実現しているため,ユーザーは入力時に文字の大小を意識する必要がない.
 そのため,検索漏れを防ぐことができ,よりスムーズに目的の情報へアクセスできるようになった.
 また,検索結果の件数を取得し,「○件」という形式で表示することで,検索結果の量を一目で把握できるようにした.
@@ -232,9 +230,10 @@
 \end{figure}
 
 観光地の登録機能においては,MapboxのSearch Box API[7]を活用した地名検索機能を導入した.
+施設名の入力画面は図3.16である.
 これにより,ユーザーは住所だけでなく,観光地名やカテゴリ,通り名などを入力することで,目的の場所を効率的に検索できるようになった.
 
-以前は完全無料であるOpenStreetMapのNominatimを利用していたが,目的の観光地が検索にヒットしにくいという課題があった.MapboxのSearch Box APIへの切り替えにより,検索精度が向上し,より多くの地名を正確に取得できるようになったことで,ユーザー体験の向上につながった.
+以前は完全無料であるOpenStreetMapのNominatimを利用していたが,目的の観光地が検索にヒットしにくいという課題があった.そこで,MapboxのSearch Box APIへの切り替えにより,検索精度が向上し,より多くの地名を正確に取得できるようになったことで,ユーザー体験の向上につながった.
 
 また,MapboxのSearch Box APIは月10万回まで無料で利用できるため,コスト面でも導入しやすいという利点がある.
 \begin{figure}[htbp]
@@ -245,9 +244,9 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org18d9ea6}
+\label{sec:org207daba}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
-まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
+まず,図3.17のように旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
 さらに,基本項目をテンプレート化することで,今回だけ書き忘れたという漏れを防ぐ効果も期待できる.
 
@@ -258,7 +257,7 @@
 \end{figure}
 
 また,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
-これにより,ユーザーは旅行の目的や季節,同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+これにより,ユーザーは旅行の目的や季節,同行者に応じて,図3.18のように必要な項目を柔軟に追加することも可能となった.
 状況に応じたカスタマイズが行えることで,より実際のニーズに即した準備ができるようになり,忘れ物や準備漏れの防止にもつながる.
 \begin{figure}[htbp]
 \centering
@@ -266,7 +265,7 @@
 \caption{チェックリスト追加画面.}
 \end{figure}
 
-さらに,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
+さらに,図3.19に示したとおり,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
 これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の負担を軽減することが可能となった.
 チェックの状態は旅行ごとに保存されるため,複数の旅行を並行して準備する場合でも, 各旅程の進捗を個別に管理できる.
  \begin{figure}[htbp]
@@ -279,7 +278,7 @@
 
 
 \chapter{まとめ}
-\label{sec:org33352bf}
+\label{sec:orgba92ec8}
 
 本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
 視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
