--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,7 +1,7 @@
 \tableofcontents
 
 \chapter{序論}
-\label{sec:org20812b4}
+\label{sec:org06484a5}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:orgca12a8c}
+\label{sec:orgc7673c4}
 \section{開発手法}
-\label{sec:org28dc51a}
+\label{sec:org710f6d7}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Django}
-\label{sec:org8def3c2}
+\label{sec:orgfded03f}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
@@ -40,9 +40,9 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \chapter{結果と考察}
-\label{sec:org9ebcd50}
+\label{sec:org0100c54}
 \section{アプリ機能}
-\label{sec:org9404be7}
+\label{sec:org66702f4}
 今回，開発したアプリでは大きく分けて7つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -52,7 +52,7 @@
 \end{figure}
 
 \subsection{アカウント機能}
-\label{sec:orgced2597}
+\label{sec:orge0bcfe9}
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
 図3.2に示したとおり,ログイン画面では登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
@@ -88,7 +88,7 @@
 
 \newpage
 \subsection{共有機能}
-\label{sec:org2684859}
+\label{sec:orgf27937c}
 本アプリでは,図3.6に示したとおりユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
@@ -140,7 +140,7 @@
 
 
 \subsection{旅行作成画面}
-\label{sec:orgf00ac4e}
+\label{sec:org0d6ba8a}
 図3.11のような旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
 \begin{figure}[htbp]
@@ -150,7 +150,7 @@
 \end{figure}
 
 \subsection{旅程の視覚化管理}
-\label{sec:orgf8317f8}
+\label{sec:org8c38483}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,図3.12に示したとおり登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -184,7 +184,7 @@
 
 
 \subsection{UI設計とスタイルの工夫}
-\label{sec:orgd7a5533}
+\label{sec:orgceace0a}
 本システムでは,Bootstrap 5.1.3[5]を採用し,ユーザーインターフェースの視覚的理解を促進した.
 
 観光地情報などの表示にBootstrapのカードコンポーネントを活用し,情報の視認性と整理性を高めている.
@@ -194,7 +194,7 @@
 
 
 \subsection{旅程の編集・調節機能}
-\label{sec:orgc8a8a8a}
+\label{sec:org8c47a92}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
@@ -214,7 +214,7 @@
 
 
 \subsection{検索機能}
-\label{sec:org6cca1be}
+\label{sec:org8479df5}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
@@ -244,7 +244,7 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org207daba}
+\label{sec:org35edb65}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,図3.17のように旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -278,7 +278,7 @@
 
 
 \chapter{まとめ}
-\label{sec:orgba92ec8}
+\label{sec:org91d2711}
 
 本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
 視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
