--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -43,10 +43,15 @@
 * 結果と考察
 ** [#B] アプリ機能
 今回，開発したアプリでは大きく分けて7つの機能を実装した．
-それぞれの機能は図3.1の通りである．
+それぞれの機能は図3.1の通りである．それぞれの機能について次節以降で記述する.
  #+CAPTION: アプリ機能一覧.
  #+attr_latex: :width 15cm
  file:./fig/app.png
+
+
+DjangoはMTV（Model–Template–View）アーキテクチャに基づいており, それぞれ「アプリ内で扱う情報の構造を定義し, データベースとの連携を担うモデル層（Model）」「ユーザーの操作に応じて処理を行い, 適切なデータや画面を返すビュー層（View）」「画面表示を構成するテンプレート層（Template）」の3つの役割に分かれている.
+たとえば,旅行作成機能では, ユーザーが入力した旅行タイトル・説明・日付などの情報を, テンプレートを通じてフォームとして表示し, ビューがその入力を受け取って処理し, モデルを介してデータベースに保存する. 保存された情報は, 旅行一覧や詳細ページで再びビューによって取得され, テンプレートに渡されてHTMLとして出力される. この一連の流れにより, 旅行情報の登録・閲覧・編集・削除といった基本的なCRUD操作が実現されている.このように DjangoのMTVアーキテクチャは, 機能ごとの責任範囲を明確に分離することで, コードの可読性や再利用性を高めている.
+
 
 *** [#B] アカウント機能
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
@@ -56,10 +61,6 @@
  #+attr_latex: :width 10cm
  file:./fig/login.png
 
-図3.3に示したとおりログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
- #+CAPTION: ログイン失敗画面.
- #+attr_latex: :width 10cm 
- file:./fig/failure.png
 
 一方,まだ登録を行っていないユーザーに対しては,図3.4のように新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
 パスワードの確認入力を設けることで,入力ミスによるログイン失敗を防ぎ、ユーザー体験の向上を図っている.
