--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,7 +1,7 @@
 \tableofcontents
 
 \chapter{序論}
-\label{sec:orge435571}
+\label{sec:org039ff98}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org35dad10}
+\label{sec:org5087a68}
 \section{開発手法}
-\label{sec:orgad46363}
+\label{sec:org1706520}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Django}
-\label{sec:orgb592602}
+\label{sec:orga1673a9}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
@@ -40,9 +40,9 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \chapter{結果と考察}
-\label{sec:org43c0cce}
+\label{sec:orgab80107}
 \section{アプリ機能}
-\label{sec:org7c63072}
+\label{sec:org895ff1d}
 今回，開発したアプリでは大きく分けて7つの機能を実装した．
 それぞれの機能は図3.1の通りである．それぞれの機能について次節以降で記述する.
 \begin{figure}[htbp]
@@ -57,7 +57,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{アカウント機能}
-\label{sec:org25a4d79}
+\label{sec:orgd2b0671}
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
 図3.2に示したとおり,ログイン画面では登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
@@ -87,7 +87,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 \newpage
 \subsection{共有機能}
-\label{sec:orga486d8a}
+\label{sec:orge0d73e6}
 本アプリでは,図3.6に示したとおりユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
@@ -139,7 +139,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{旅行作成画面}
-\label{sec:org08296e3}
+\label{sec:orgc67b0cf}
 図3.11のような旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
 \begin{figure}[htbp]
@@ -149,7 +149,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 \end{figure}
 
 \subsection{旅程の視覚化管理}
-\label{sec:org233cca7}
+\label{sec:org516c508}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,図3.12に示したとおり登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -183,7 +183,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{UI設計とスタイルの工夫}
-\label{sec:org7b0bd05}
+\label{sec:org74586e4}
 本システムでは,Bootstrap 5.1.3[5]を採用し,ユーザーインターフェースの視覚的理解を促進した.
 
 観光地情報などの表示にBootstrapのカードコンポーネントを活用し,情報の視認性と整理性を高めている.
@@ -193,7 +193,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{旅程の編集・調節機能}
-\label{sec:org5c0be91}
+\label{sec:orgaca915e}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
@@ -201,8 +201,45 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 また図3.14に示したとおり,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
-これらはMapboxのDirections API[6]を活用して開発を行っている.
-さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
+
+これらはMapboxのDirections API[6]を活用して開発を行っている.以下にその処理の流れを示す.
+
+アクティブなタブに表示されている観光地リストから, 各地点の座標（経度・緯度）を配列として取得する.
+この配列の先頭を出発地, 末尾を目的地, それ以外を経由地として分割し, Directions API に渡す形式に整形する.
+travelDuration(type, start, waypoints, dest) は、Mapbox Directions API を使ってルート情報を取得する関数である.
+
+•type：移動手段（例：driving, walking, cycling）
+
+•start：出発地の座標（\{ lon, lat \}）
+
+•waypoints：経由地の配列
+
+•dest：目的地の座標
+
+経由地は任意の個数を指定できるため, 配列として管理している.
+指定形式に変換した座標データと移動手段をもとに, 以下の形式のURLに対してリクエストを送信する.
+
+\url{https://api.mapbox.com/directions/v5/\{profile\}/\{coordinates}\} 
+
+に対してリクエストを送信することで,複数地点間の移動時間・距離を一度に取得できる.
+
+・profile: 移動手段を指定するパラメータであり, driving（車）, walking（徒歩）, cycling（自転車）の3種類が用意されている. 本アプリでは driving を使用している.
+
+・coordinates: 出発地・経由地・目的地の座標を「経度,緯度」形式でセミコロン（;）区切りで列挙する.
+
+この形式により, 複数地点間のルートを1回のリクエストでまとめて取得することが可能となる.
+
+APIからのレスポンスには routes 配列が含まれており, 最適なルートが routes[0] に格納されている.
+この中の legs 配列には, 各区間（出発地→経由地→目的地）ごとの詳細情報が含まれており,それぞれの leg には以下の情報が含まれる.
+
+・duration: 所要時間（秒単位）
+
+・distance: 移動距離（メートル単位）
+
+取得した各区間のデータをもとに, 所要時間は分単位に, 距離はキロメートル単位（小数点1桁）に変換し,
+「車 約15分（3.2km）」のような形式で, 観光地カードの間に動的に挿入して表示している.
+移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
+
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=12cm]{./fig/car.png}
@@ -213,7 +250,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{検索機能}
-\label{sec:orgc4a05cd}
+\label{sec:org5033c42}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
@@ -243,7 +280,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \subsection{チェックリスト機能}
-\label{sec:orgda453ba}
+\label{sec:orgcbc580f}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,図3.17のように旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -277,7 +314,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 
 \chapter{まとめ}
-\label{sec:orgcfe94f8}
+\label{sec:orgbb7f4e4}
 
 本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
 視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
