--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -170,8 +170,45 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 
 また図3.14に示したとおり,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
-これらはMapboxのDirections API[6]を活用して開発を行っている.
-さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
+
+これらはMapboxのDirections API[6]を活用して開発を行っている.以下にその処理の流れを示す.
+
+アクティブなタブに表示されている観光地リストから, 各地点の座標（経度・緯度）を配列として取得する.
+この配列の先頭を出発地, 末尾を目的地, それ以外を経由地として分割し, Directions API に渡す形式に整形する.
+travelDuration(type, start, waypoints, dest) は、Mapbox Directions API を使ってルート情報を取得する関数である.
+
+•type：移動手段（例：driving, walking, cycling）
+
+•start：出発地の座標（{ lon, lat }）
+
+•waypoints：経由地の配列
+
+•dest：目的地の座標
+
+経由地は任意の個数を指定できるため, 配列として管理している.
+指定形式に変換した座標データと移動手段をもとに, 以下の形式のURLに対してリクエストを送信する.
+
+https://api.mapbox.com/directions/v5/{profile}/{coordinates} 
+
+に対してリクエストを送信することで,複数地点間の移動時間・距離を一度に取得できる.
+
+・profile: 移動手段を指定するパラメータであり, driving（車）, walking（徒歩）, cycling（自転車）の3種類が用意されている. 本アプリでは driving を使用している.
+
+・coordinates: 出発地・経由地・目的地の座標を「経度,緯度」形式でセミコロン（;）区切りで列挙する.
+
+この形式により, 複数地点間のルートを1回のリクエストでまとめて取得することが可能となる.
+
+APIからのレスポンスには routes 配列が含まれており, 最適なルートが routes[0] に格納されている.
+この中の legs 配列には, 各区間（出発地→経由地→目的地）ごとの詳細情報が含まれており,それぞれの leg には以下の情報が含まれる.
+
+・duration: 所要時間（秒単位）
+
+・distance: 移動距離（メートル単位）
+
+取得した各区間のデータをもとに, 所要時間は分単位に, 距離はキロメートル単位（小数点1桁）に変換し,
+「車 約15分（3.2km）」のような形式で, 観光地カードの間に動的に挿入して表示している.
+移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
+
  #+CAPTION: 車による移動時間の自動算出結果を表示した画面.
  #+attr_latex: :width 12cm
  file:./fig/car.png
