--- a/thesis/reference/reference.tex
+++ b/thesis/reference/reference.tex
@@ -8,5 +8,6 @@
 \bibitem{Font Awesome} Font Awesome - \url{https://fontawesome.com/} (accessd on 05 Sep 2025).
 \bibitem{Directions API} Directions API - \url{https://docs.mapbox.com/api/navigation/directions/} (accessd on 20 Dec 2025).
 \bibitem{Search Box API} Search Box API - \url{https://docs.mapbox.com/api/search/search-box/} (accessd on 20 Dec 2025).
+\bibitem{signals} signals - \url{https://docs.djangoproject.com/ja/6.0/topics/signals//} (accessd on 20 Dec 2025).
 \end{thebibliography}
 }
